do section spacing, replace secondary apostrophe

--- a/index.html
+++ b/index.html
@@ -422,8 +422,8 @@
                         <h5 class="heavy">Our story is what guides the experiences we create</h5>
                     </div>
                     <article class="row">
-                        <p>Buying technology today often seems to be just about the technology itself, a purely aesthetic representation of the product  not really about what it's used for. While this may drive the initial sale, we believe that technology ultimately exists to help people with what they’re up against and to empower them to achieve more.</p>
-                        <p>Our job at Microsoft Store is to remove barriers between people, their ideas, and ways to pursue them. It’s not just presenting great products—it's showing how to use them. It’s highlighting the creators of these products, sharing their stories, and inviting customers to co-create with us. Ultimately, it’s bringing people together and in that moment helping them achieve the new, the possible, and the impossible. </p>
+                        <p>Buying technology today often seems to be just about the technology itself, a purely aesthetic representation of the product  not really about what it's used for. While this may drive the initial sale, we believe that technology ultimately exists to help people with what they're up against and to empower them to achieve more.</p>
+                        <p>Our job at Microsoft Store is to remove barriers between people, their ideas, and ways to pursue them. It's not just presenting great products—it's showing how to use them. It's highlighting the creators of these products, sharing their stories, and inviting customers to co-create with us. Ultimately, it's bringing people together and in that moment helping them achieve the new, the possible, and the impossible. </p>
                         <p>That's what we do in Microsoft Store.</p>
                     </article>
                     <div class="row ">
@@ -692,13 +692,13 @@
                             <div class="channel">Learners</div>
                             <div class="role">The space to engage with the broadest set of customers, introducing them to Microsoft, showing
                                 the breadth of our offering, as well as creating highly targeted engaging experiences. </div>
-                            <div class="message">Experience all that’s possible with Microsoft.</div>
+                            <div class="message">Experience all that's possible with Microsoft.</div>
                         </div>
                         <div class="tt-row">
                             <div class="channel">Business</div>
                             <div class="role">The best way to establish a personal relation with customers, delivering experiences that require
                                 physical presence. </div>
-                            <div class="message">Experience all that’s possible with Microsoft.</div>
+                            <div class="message">Experience all that's possible with Microsoft.</div>
                         </div>
                     </div>
                 </div>
@@ -951,7 +951,7 @@
                     <div class="row-lined hidden-xs">
                         <div class="thirds">
                             <div class="explanation">
-                                <p class="title">Empower, don’t just sell</p>
+                                <p class="title">Empower, don't just sell</p>
                                 <p>The most efficient way to engage with customers on Windows, delivering experiences that are relevant to their current Windows 10 device.</p>
                             </div>
                         </div>
@@ -970,7 +970,7 @@
                     <div class="row-lined hidden-xs">
                         <div class="thirds">
                             <div class="explanation">
-                                <p class="title">Narrate, don’t be random</p>
+                                <p class="title">Narrate, don't be random</p>
                                 <p>All stories must leave your audience feeling that they can achieve anything if they have the right tools.</p>
                             </div>
                         </div>
@@ -988,7 +988,7 @@
                     <div class="row-lined hidden-xs">
                         <div class="thirds">
                             <div class="explanation">
-                                <p class="title">Currate don’t just promote</p>
+                                <p class="title">Currate don't just promote</p>
                                 <p>Curate compelling experiences, don't promote robotic, irrelevant, non-cohesive offerings
                                     </p>
                             </div>
@@ -1011,7 +1011,7 @@
                             <p>Invite others to co-create with us—be it a design treatment, a collaboration, or a partnership. Bring others into the fold and let them create the things they want. They know better.</p>
                         </div>
                         <div class="donts">
-                            <p>Experience all that’s possible with Microsoft.</p>
+                            <p>Experience all that's possible with Microsoft.</p>
                         </div>
                     </div>
                     <div class="row-lined hidden-xs">
@@ -1033,7 +1033,7 @@
                     <div class="row visible-xs">
                             <div class="row-lined">
                                 <div class="explanation">
-                                    <p class="title">Empower, don’t just sell</p>
+                                    <p class="title">Empower, don't just sell</p>
                                     <p>The most efficient way to engage with customers on Windows, delivering experiences that are
                                         relevant to their current Windows 10 device.</p>
                                 </div>
@@ -1049,7 +1049,7 @@
                             </div>
                             <div class="row-lined">
                                 <div class="explanation">
-                                    <p class="title">Narrate, don’t be random</p>
+                                    <p class="title">Narrate, don't be random</p>
                                     <p>All stories must leave your audience feeling that they can achieve anything if they have
                                         the right tools.</p>
                                 </div>
@@ -1065,7 +1065,7 @@
                             </div>
                             <div class="row-lined">
                                 <div class="explanation">
-                                    <p class="title">Currate don’t just promote</p>
+                                    <p class="title">Currate don't just promote</p>
                                     <p>Curate compelling experiences, don't promote robotic, irrelevant, non-cohesive offerings</p>
                                 </div>
                                 <div class="dos">
@@ -1088,7 +1088,7 @@
                                 </div>
                                 <div class="donts">
                                     <p class="title large">Don't do this</p>
-                                    <p>Experience all that’s possible with Microsoft.</p>
+                                    <p>Experience all that's possible with Microsoft.</p>
                                 </div>
                             </div>
                             <div class="row-lined">
@@ -1550,13 +1550,11 @@
                     <div class="row-five empty-cell">
                         <div class="thirds">
                             <p class="title">Wayfinding</p>
-                            <p>When an icon is required to represent Microsoft Store and link to Microsoft Store experiences.
-                                Never use it to represent a brand or as a "logo" to compete against other big brands. </p>
+                            <p>When an icon is required to represent Microsoft Store and link to Microsoft Store experiences. Never use it to represent a brand or as a "logo" to compete against other big brands. </p>
                         </div>
                         <div class="thirds">
                             <p class="title">Graphic continuity</p>
-                            <p>When a set of Microsoft properties is represented with icons and Microsoft Store would be the
-                                only one without iconic representation. </p>
+                            <p>When a set of Microsoft properties is represented with icons and Microsoft Store would be the only one without iconic representation. </p>
                         </div>
                     </div>
 
@@ -1679,7 +1677,7 @@
 
                     <div class="row-seven">
                         <div class="half">
-                            <p class="title">Don’t use the icon next to other brands or in a sentence.</p>
+                            <p class="title">Don't use the icon next to other brands or in a sentence.</p>
                             <img src="assets/dont-use-with-other-logos.png" alt="Do not use Microsoft Store icon with other logos">
                             <img src="assets/ms-store-as-text.png" alt="Use Microsoft Store as text">
                             <p>Instead use "Microsoft Store" in text</p>
@@ -2394,7 +2392,7 @@
                         <div class="fourths">
                             <p class="title">Simple metaphors</p>
                             <img src="assets/metaphor.png" alt="don't use lifestyle as metaphor">
-                            <p>Don’t use lifestyle photography to illustrate simple abstract concepts</p>
+                            <p>Don't use lifestyle photography to illustrate simple abstract concepts</p>
                         </div>
                         <div class="fourths">
                             <p class="title">Product photography</p>
@@ -2406,13 +2404,13 @@
                                 Simple metaphors
                             </p>
                             <img src="assets/metaphor-2.png" alt="don't use lifestyle image as metaphor">
-                            <p>Don’t use illustration to show simple abstract concepts that don’t show what customers can create
+                            <p>Don't use illustration to show simple abstract concepts that don't show what customers can create
                                 with our products.</p>
                         </div>
                         <div class="fourths">
                             <p class="title">Abstract concepts</p>
                             <img src="assets/abstract.png" alt="don't use lifestyle photography for abstract concepts">
-                            <p>Don’t use lifestyle photography to illustrate abstract concepts</p>
+                            <p>Don't use lifestyle photography to illustrate abstract concepts</p>
                         </div>
                     </div>
 
@@ -2423,7 +2421,7 @@
                     <div class="row-twelve">
                         <div class="fourths">
                             <img src="assets/lifestyle-abstract.png" alt="don't use lifestyle photography to illustrate abstract ideas">
-                            <p>Don’t use lifestyle photography to illustrate simple abstract concepts</p>
+                            <p>Don't use lifestyle photography to illustrate simple abstract concepts</p>
                         </div>
                         <div class="fourths">
                             <img src="assets/lifestyle-as-filler-2.png" alt="don't use lifestyle photography as a screen filler">
@@ -2431,12 +2429,12 @@
                         </div>
                         <div class="fourths">
                             <img src="assets/lifestlye-line.png" alt="don't use illustrations for abstract concepts">
-                            <p>Don’t use illustration to show simple abstract concepts that don’t show what customers can create
+                            <p>Don't use illustration to show simple abstract concepts that don't show what customers can create
                                 with our products.</p>
                         </div>
                         <div class="fourths">
                             <img src="assets/abstract-illustration.png" alt="don't use lifestyle photography to illustrate abstract concepts">
-                            <p>Don’t use lifestyle photography to illustrate abstract concepts</p>
+                            <p>Don't use lifestyle photography to illustrate abstract concepts</p>
                         </div>
                     </div>
                 </div>
@@ -2707,7 +2705,7 @@
 
                     <div class="row-twelve">
                         <div class="fourths"> 
-                            <p class="title">Tell a clearer story that photos can’t.</p>
+                            <p class="title">Tell a clearer story that photos can't.</p>
                             <img src="assets/illustration-1.png" alt="mobile of icons">
                             <p>Use a visual metaphor in your illustration to communicate complex ideas that photos can't.</p>
                         </div>
