Thank you (final section) creation and style

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     </ul>
                 </li>
                 <li role="menuitem">
-                    <a href="#section-7" class="green_green">Au Revoir</a>
+                    <a href="#section-7" class="pink">Thank you</a>
                 </li>
             </ul>
         </nav>
@@ -3024,19 +3024,33 @@
                     </div>
                 </div>
             </section>
-            <section id="section-7">
+            <section id="section-7" class="small">
                 <div class="wrapper">
-                    <span class="badge green"></span>
+                    <h3>Thank you</h3>
+                </div>
+            </section>
+            <section id="section-7-1">
+                <div class="wrapper">
                     <div class="row">
                         <h4></h4>
+                        <h5>We are immensely grateful to 100+ people who contributed to these new guidelines. Thank you.</h5>
                     </div>
                     <div class="row">
-                        <h5></h5>
-                    </div>
-                    <div class="row">
-                        <p></p>
+                        <p>We know applying these principles takes time and effort, but the stories we tell in all of our Microsoft communications will be stronger for it.</p>
+                        <p>If you have any brand questions or wish to access tools, templates, or other guidelines please don't hesitate to <a href="">reach out to us.</a></p>
+                        <p>See complete Microsoft Store marketing guidelines</p>
+                        <br/>
+                        <br/>
+                        <p><a href="">Microsoft Store messaging guidelines</a></p>
+                        <p><a href="">Microsoft Store extended messaging guidelines</a></p>
+                        <p><a href="">Microsoft Store screens</a></p>
+                        <p><a href="">Microsoft Store digital banner templates</a></p>
+                        <p><a href="">Microsoft Store social templates</a></p>
+                        <p><a href="">For FAQs or questions / Help Center</a></p>
+                        <p><a href="">For assets / Brand Central</a></p>
                     </div>
                 </div>
+
             </section>
         </main>
 
