clean up images in section 4

--- a/index.html
+++ b/index.html
@@ -1748,7 +1748,7 @@
                         <div class="fourths">
                             <img src="assets/store-badge-1.png" alt="Microsoft Store badge at bottom of image">
                         </div>
-                        <div class="thirds">
+                        <div class="thirds centered">
                             <img src="assets/store-badge-2.png" alt="Microsoft Store badge under text">
                         </div>
                         <div class="thirds">
