update links at the Thank You section 7

--- a/index.html
+++ b/index.html
@@ -3037,17 +3037,19 @@
                     </div>
                     <div class="row">
                         <p>We know applying these principles takes time and effort, but the stories we tell in all of our Microsoft communications will be stronger for it.</p>
-                        <p>If you have any brand questions or wish to access tools, templates, or other guidelines please don't hesitate to <a href="">reach out to us.</a></p>
+                        <p>If you have any brand questions or wish to access tools, templates, or other guidelines please don't hesitate to <a href="mailto:storebrand%40microsoft.com?subject=">reach out to us.</a></p>
+                        <br/>
+                        <br/>
                         <p>See complete Microsoft Store marketing guidelines</p>
                         <br/>
                         <br/>
-                        <p><a href="">Microsoft Store messaging guidelines</a></p>
-                        <p><a href="">Microsoft Store extended messaging guidelines</a></p>
-                        <p><a href="">Microsoft Store screens</a></p>
-                        <p><a href="">Microsoft Store digital banner templates</a></p>
-                        <p><a href="">Microsoft Store social templates</a></p>
-                        <p><a href="">For FAQs or questions / Help Center</a></p>
-                        <p><a href="">For assets / Brand Central</a></p>
+                        <p><a href="https://microsoft.sharepoint.com/teams/BrandCentral/Pages/Guidelines.aspx">Microsoft Store messaging guidelines</a></p>
+                        <p><a href="https://microsoft.sharepoint.com/teams/BrandCentral/Pages/Guidelines.aspx">Microsoft Store extended messaging guidelines</a></p>
+                        <p><a href="https://microsoft.sharepoint.com/teams/BrandCentral/Pages/Guidelines.aspx">Microsoft Store screens</a></p>
+                        <p><a href="https://microsoft.sharepoint.com/teams/BrandCentral/Pages/Guidelines.aspx">Microsoft Store digital banner templates</a></p>
+                        <p><a href="https://microsoft.sharepoint.com/teams/BrandCentral/Pages/Guidelines.aspx">Microsoft Store social templates</a></p>
+                        <p><a href="https://microsoft.sharepoint.com/teams/brandcentral/pages/help-Ask-a-question.aspx">For FAQs or questions / Help Center</a></p>
+                        <p><a href="https://microsoft.sharepoint.com/teams/BrandCentral/">For assets / Brand Central</a></p>
                     </div>
                 </div>
 
