--- a/index.html
+++ b/index.html
@@ -2399,12 +2399,12 @@
                             <div class="single">
                                 
                                 <img src="assets/lifestyle-as-filler.png" alt="don't use lifestyle photography as a screen filler">
-                                <p>Avoid using lfiestyle photography as a screen fill.</p>
+                                <p>Avoid using lifestyle photography as a screen fill.</p>
                             </div>
                             <div class="single">
     
                                     <img src="assets/lifestyle-as-filler-2.png" alt="don't use lifestyle photography as a screen filler">
-                                    <p>Avoid using lfiestyle photographyAC as a screen fill.</p>
+                                    <p>Avoid using lifestyle photography as a screen fill.</p>
                             </div>
 
                         </div>
