typo changes for nav

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <a href="#section-4-1" class="orange">Summary</a>
                         </li>
                         <li role="menuitem" class="sub-nav__item">
-                            <a href="#section-4-2" class="orange">Our Name</a>
+                            <a href="#section-4-2" class="orange">Our name</a>
                         </li>
                         <li role="menuitem" class="sub-nav__item">
                             <a href="#section-4-3" class="orange">Microsoft logo</a>
@@ -138,7 +138,7 @@
                             <a href="#section-5-1" class="green">Design principles</a>
                         </li>
                         <li role="menuitem" class="sub-nav__item">
-                            <a href="#section-5-2" class="green">Accessibilty</a>
+                            <a href="#section-5-2" class="green">Accessibility</a>
                         </li>
                         <li role="menuitem" class="sub-nav__item">
                             <a href="#section-5-3" class="green">Color</a>
@@ -179,10 +179,10 @@
                     <a href="#section-6" class="pink">Building out a communication</a>
                     <ul class="sub-nav">
                         <li class="sub-nav__item" role="presentation">
-                            <a  href="#section-6-1" class="pink">Microsoft Stores screens</a>
+                            <a  href="#section-6-1" class="pink">Microsoft Store screens</a>
                         </li>
                         <li class="sub-nav__item" role="presentation" >
-                            <a href="#section-6-2" class="pink">Digital Banners</a>
+                            <a href="#section-6-2" class="pink">Digital banners</a>
                         </li>
                         <li class="sub-nav__item" role="presentation" > 
                             <a href="#section-6-3" class="pink">Social</a>
@@ -2175,9 +2175,9 @@
 
                     <div class="gray table-row">
                         <div class="first semibold">Font size</div>
-                        <div class="second semibold f-big">20pt and below</div>
-                        <div class="third semibold f-bigger">21 to 33pt</div>
-                        <div class="fourth semibold f-bigger">34pt and above</div>
+                        <div class="second semibold ">20pt and below</div>
+                        <div class="third semibold ">21 to 33pt</div>
+                        <div class="fourth semibold ">34pt and above</div>
                     </div>
                     <div class="table-row underline">
                         <div class="first">Use this for </div>
