Update 5-7 images to be same height. Remove kerning siteside

--- a/index.html
+++ b/index.html
@@ -1413,6 +1413,7 @@
                             <br> Don't use the symbol on its own. </h5>
                     </div>
                     <div class="row-fluid primary-logo">
+                        <p>Our logo</p>
                         <img class="lazy" src="assets/microsoft-logo.png" alt="Microsoft official logo">
                     </div>
                     <div class="row padding">
