remove exlamation point on menu

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             
             <ul id="menu-list">
-                <li class="title">Microsoft Store!<br>marketing guidelines</li>
+                <li class="title">Microsoft Store<br>marketing guidelines</li>
                 <li role="menuitem" class="active">
                     <a class="purple active" href="#section-1">Welcome</a>
                     <ul class="sub-nav">
