quick text update to photo subsectiong

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                             </picture>
                         </div>
                         <div class="right">
-                            <p>For Kenesha Sneed, starting Tactile Matter, a business creating ceramics, was about finding the balance between heart and head. </p>She needed to prove to herself that she could do it. That she could beat the odds, and do so in a way that maintained her integrity as an artist. A balance and a struggle we are all familiar with.</p>
+                            <p>For Kenesha Sneed, starting Tactile Matter, a business creating ceramics, was about finding the balance between heart and head. She needed to prove to herself that she could do it. That she could beat the odds, and do so in a way that maintained her integrity as an artist. A balance and a struggle we are all familiar with.</p>
                         </div>
                     </div>
                 </div>
