Change Thank you to Resources

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     </ul>
                 </li>
                 <li role="menuitem">
-                    <a href="#section-7" class="pink">Thank you</a>
+                    <a href="#section-7" class="pink">Resources</a>
                 </li>
             </ul>
         </nav>
@@ -3036,7 +3036,7 @@
             </section>
             <section id="section-7" class="small">
                 <div class="wrapper">
-                    <h3>Thank you</h3>
+                    <h3>Resources</h3>
                 </div>
             </section>
             <section id="section-7-1">
