Updating URLs and some copy

--- a/index.html
+++ b/index.html
@@ -700,7 +700,12 @@
                             <div class="message">Experience all that's possible with Microsoft.</div>
                         </div>
                     </div>
+                    <div class="cta">
+                        <a href="https://microsoft.sharepoint.com/teams/BrandCentral/Pages/Guidelines.aspx">See the messaging framework</a>
+                    </div>
+
                 </div>
+
             </section>
             <section id="section-3" class="small">
                 <div class="wrapper">
@@ -1197,7 +1202,7 @@
                                     Stores/Store
                                 </p>
                                 <p>
-                                    Mara&#0417;&#0418;&#x041D;Microsoft
+                                    Магазин Microsoft
                                 </p>
                                 <p>
                                     Microsoft boutique
@@ -1399,7 +1404,7 @@
                         <h5 class="heavy">The Microsoft logo is the only logo used in our communications.
                             <br> Microsoft Store logo lock-ups appear only in global advertising.
                             <br> Don't create logo lock-ups.
-                            <br> Don't use the symbol on it's own. </h5>
+                            <br> Don't use the symbol on its own. </h5>
                     </div>
                     <div class="row-fluid primary-logo">
                         <p>Our logo</p>
