update URls sitewide

--- a/index.html
+++ b/index.html
@@ -1844,11 +1844,11 @@
                     </div>
 
                     <div class="row">
-                        <a href="https://microsoft.sharepoint.com/:w:/r/teams/msenable/_layouts/15/Doc.aspx?sourcedoc=%7B596F8B46-8D84-4605-A396-62106243C661%7D&file=MAS%20Pre-filtered%20for%20Web.docx&action=edit&mobileredirect=true"
-                            class="full" target="_blank">MAS pre-filtered web Accessibilty guidelines </a>
+                        <p><a href="https://microsoft.sharepoint.com/:w:/r/teams/msenable/_layouts/15/Doc.aspx?sourcedoc=%7B596F8B46-8D84-4605-A396-62106243C661%7D&file=MAS%20Pre-filtered%20for%20Web.docx&action=edit&mobileredirect=true"
+                            class="full" target="_blank">MAS pre-filtered web Accessibilty guidelines </a></p>
                     </div>
                     <div class="row">
-                        <a href="https://www.microsoft.com/en-us/Accessibilty/default.aspx" class="full">See the full Microsoft accessibilty standards </a>
+                        <p><a href="https://www.microsoft.com/en-us/accessibility/default.aspx" class="full" target="_blank">See the full Microsoft accessibilty standards </a></p>
                     </div>
                 </div>
             </section>
@@ -2086,7 +2086,7 @@
                      <div class="row" role="presentation"></div>
 
                     <div class="row">
-                        <a href="https://www.microsoft.com/en-us/Accessibilty/default.aspx" class="full">See complete color guidelines</a>
+                        <p><a href="https://microsoft.sharepoint.com/teams/BrandCentral/Guidelines/Microsoft_color_guidelines.pdf" class="full">See complete color guidelines</a></p>
                     </div>
 
                 </div>
@@ -2239,7 +2239,7 @@
                     <div class="row" role="presentation"></div>
 
                     <div class="row">
-                        <a href="https://microsoft.sharepoint.com/teams/BrandCentral/Guidelines/Microsoft_type_guidelines.pdf" class="full">Download complete type guidelines</a>
+                        <p><a href="https://microsoft.sharepoint.com/teams/BrandCentral/Guidelines/Microsoft_type_guidelines.pdf" class="full">Download complete type guidelines</a></p>
                     </div>
                 </div>
             </section>
@@ -2305,7 +2305,7 @@
                     <div class="row" role="presentation"></div>
     
                     <div class="row">
-                        <a href="https://www.youtube.com/watch?v=jVhlJNJopOQ" class="full" target="_blank">See how our eyes bleed when we see examples like this </a>
+                        <p><a href="https://www.youtube.com/watch?v=jVhlJNJopOQ" class="full" target="_blank">See how our eyes bleed when we see examples like this </a></p>
                     </div>
                 </div>
             </section>
@@ -2517,8 +2517,8 @@
                     <div class="row" role="presentation"></div>
 
                     <div class="row">
-                        <a href="https://microsoft.sharepoint.com/teams/BrandCentral/Guidelines/Microsoft_photography_guidelines.pdf"
-                            class="full">See complete photography guidelines </a>
+                        <p><a href="https://microsoft.sharepoint.com/teams/BrandCentral/Guidelines/Microsoft_photography_guidelines.pdf"
+                            class="full">See complete photography guidelines </a></p>
                     </div>
                 </div>
             </section>
@@ -2724,7 +2724,7 @@
                     <div class="row" role="presentation"></div>
 
                     <div class="row">
-                        <a href="https://microsoft.sharepoint.com/teams/BrandCentral/Guidelines/Microsoft_illustration_guidelines.pdf" class="full">See complete illustration guidelines</a>
+                        <p><a href="https://microsoft.sharepoint.com/teams/BrandCentral/Guidelines/Microsoft_illustration_guidelines.pdf" class="full">See complete illustration guidelines</a></p>
                     </div>
                 </div>
             </section>
@@ -2780,8 +2780,8 @@
                     <div class="row" role="presentation"></div>
 
                     <div class="row">
-                        <a href="https://microsoft.sharepoint.com/teams/BrandCentral/Guidelines/Microsoft_illustration_guidelines.pdf"
-                            class="full">See complete illustration guidelines</a>
+                        <p><a href="https://microsoft.sharepoint.com/teams/BrandCentral/Guidelines/Microsoft_illustration_guidelines.pdf"
+                            class="full">See complete illustration guidelines</a></p>
                     </div>
                 </div>
             </section>
@@ -2894,7 +2894,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <a href="http://getmwf.com/getting-started/designing/glyphs.html" class="full">See complete monoline illustration guidelines</a>
+                        <p><a href="http://getmwf.com/getting-started/designing/glyphs.html" class="full">See complete monoline illustration guidelines</a></p>
                     </div>
                 </div>
             </section>
@@ -3052,7 +3052,7 @@
                         <p>If you have any brand questions or wish to access tools, templates, or other guidelines please don't hesitate to <a href="mailto:storebrand%40microsoft.com?subject=">reach out to us.</a></p>
                         <br/>
                         <br/>
-                        <p>See complete Microsoft Store marketing guidelines</p>
+                        <p>See complete Microsoft Store marketing guidelines:</p>
                         <br/>
                         <br/>
                         <p><a href="https://microsoft.sharepoint.com/teams/BrandCentral/Pages/Guidelines.aspx">Microsoft Store messaging guidelines</a></p>
