updates across styles

--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,7 @@
                 </div>
             </section>
             <section id="section-4" class="small">
-                <div class="wrapper">If you need
+                <div class="wrapper">
                     <h3>Brand expression</h3>
                 </div>
             </section>
