Change mobile logo to White version

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <span class="hamburger__label"></span>
                 </button>
 
-                <img src="assets/ms-logo.png" alt="Micorosoft Logo">
+                <img src="assets/ms-logo-white.png" alt="Micorosoft Logo">
             
             </div>
             
